; ModuleID = '/home/carl/AnghaBench/sumatrapdf/mupdf/source/fitz/extr_output.c_fz_new_output_with_path.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/mupdf/source/fitz/extr_output.c_fz_new_output_with_path.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32, i32, i32 }

@.str = private unnamed_addr constant [10 x i8] c"/dev/null\00", align 1
@.str.1 = private unnamed_addr constant [5 x i8] c"nul:\00", align 1
@null_write = common dso_local global i32 0, align 4
@errno = common dso_local global i64 0, align 8
@ENOENT = common dso_local global i64 0, align 8
@FZ_ERROR_GENERIC = common dso_local global i32 0, align 4
@.str.2 = private unnamed_addr constant [28 x i8] c"cannot remove file '%s': %s\00", align 1
@.str.3 = private unnamed_addr constant [4 x i8] c"rb+\00", align 1
@.str.4 = private unnamed_addr constant [4 x i8] c"wb+\00", align 1
@.str.5 = private unnamed_addr constant [26 x i8] c"cannot open file '%s': %s\00", align 1
@_IONBF = common dso_local global i32 0, align 4
@file_write = common dso_local global i32 0, align 4
@file_drop = common dso_local global i32* null, align 8
@file_seek = common dso_local global i32 0, align 4
@file_tell = common dso_local global i32 0, align 4
@file_as_stream = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.TYPE_4__* @fz_new_output_with_path(i32* %0, i8* %1, i32 %2) #0 {
  %4 = alloca %struct.TYPE_4__*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32*, align 8
  %9 = alloca %struct.TYPE_4__*, align 8
  store i32* %0, i32** %5, align 8
  store i8* %1, i8** %6, align 8
  store i32 %2, i32* %7, align 4
  %10 = load i8*, i8** %6, align 8
  %11 = call i32 @strcmp(i8* %10, i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str, i64 0, i64 0))
  %12 = icmp ne i32 %11, 0
  br i1 %12, label %13, label %17

13:                                               ; preds = %3
  %14 = load i8*, i8** %6, align 8
  %15 = call i32 @fz_strcasecmp(i8* %14, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.1, i64 0, i64 0))
  %16 = icmp ne i32 %15, 0
  br i1 %16, label %21, label %17

17:                                               ; preds = %13, %3
  %18 = load i32*, i32** %5, align 8
  %19 = load i32, i32* @null_write, align 4
  %20 = call %struct.TYPE_4__* @fz_new_output(i32* %18, i32 0, i32* null, i32 %19, i32* null, i32* null)
  store %struct.TYPE_4__* %20, %struct.TYPE_4__** %4, align 8
  br label %76

21:                                               ; preds = %13
  %22 = load i32, i32* %7, align 4
  %23 = icmp ne i32 %22, 0
  br i1 %23, label %41, label %24

24:                                               ; preds = %21
  %25 = load i8*, i8** %6, align 8
  %26 = call i64 @remove(i8* %25)
  %27 = icmp slt i64 %26, 0
  br i1 %27, label %28, label %40

28:                                               ; preds = %24
  %29 = load i64, i64* @errno, align 8
  %30 = load i64, i64* @ENOENT, align 8
  %31 = icmp ne i64 %29, %30
  br i1 %31, label %32, label %39

32:                                               ; preds = %28
  %33 = load i32*, i32** %5, align 8
  %34 = load i32, i32* @FZ_ERROR_GENERIC, align 4
  %35 = load i8*, i8** %6, align 8
  %36 = load i64, i64* @errno, align 8
  %37 = call i32 @strerror(i64 %36)
  %38 = call i32 @fz_throw(i32* %33, i32 %34, i8* getelementptr inbounds ([28 x i8], [28 x i8]* @.str.2, i64 0, i64 0), i8* %35, i32 %37)
  br label %39

39:                                               ; preds = %32, %28
  br label %40

40:                                               ; preds = %39, %24
  br label %41

41:                                               ; preds = %40, %21
  %42 = load i8*, i8** %6, align 8
  %43 = load i32, i32* %7, align 4
  %44 = icmp ne i32 %43, 0
  %45 = zext i1 %44 to i64
  %46 = select i1 %44, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.3, i64 0, i64 0), i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.4, i64 0, i64 0)
  %47 = call i32* @fopen(i8* %42, i8* %46)
  store i32* %47, i32** %8, align 8
  %48 = load i32*, i32** %8, align 8
  %49 = icmp ne i32* %48, null
  br i1 %49, label %57, label %50

50:                                               ; preds = %41
  %51 = load i32*, i32** %5, align 8
  %52 = load i32, i32* @FZ_ERROR_GENERIC, align 4
  %53 = load i8*, i8** %6, align 8
  %54 = load i64, i64* @errno, align 8
  %55 = call i32 @strerror(i64 %54)
  %56 = call i32 @fz_throw(i32* %51, i32 %52, i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str.5, i64 0, i64 0), i8* %53, i32 %55)
  br label %57

57:                                               ; preds = %50, %41
  %58 = load i32*, i32** %8, align 8
  %59 = load i32, i32* @_IONBF, align 4
  %60 = call i32 @setvbuf(i32* %58, i32* null, i32 %59, i32 0)
  %61 = load i32*, i32** %5, align 8
  %62 = load i32*, i32** %8, align 8
  %63 = load i32, i32* @file_write, align 4
  %64 = load i32*, i32** @file_drop, align 8
  %65 = call %struct.TYPE_4__* @fz_new_output(i32* %61, i32 8192, i32* %62, i32 %63, i32* null, i32* %64)
  store %struct.TYPE_4__* %65, %struct.TYPE_4__** %9, align 8
  %66 = load i32, i32* @file_seek, align 4
  %67 = load %struct.TYPE_4__*, %struct.TYPE_4__** %9, align 8
  %68 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %67, i32 0, i32 2
  store i32 %66, i32* %68, align 4
  %69 = load i32, i32* @file_tell, align 4
  %70 = load %struct.TYPE_4__*, %struct.TYPE_4__** %9, align 8
  %71 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %70, i32 0, i32 1
  store i32 %69, i32* %71, align 4
  %72 = load i32, i32* @file_as_stream, align 4
  %73 = load %struct.TYPE_4__*, %struct.TYPE_4__** %9, align 8
  %74 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %73, i32 0, i32 0
  store i32 %72, i32* %74, align 4
  %75 = load %struct.TYPE_4__*, %struct.TYPE_4__** %9, align 8
  store %struct.TYPE_4__* %75, %struct.TYPE_4__** %4, align 8
  br label %76

76:                                               ; preds = %57, %17
  %77 = load %struct.TYPE_4__*, %struct.TYPE_4__** %4, align 8
  ret %struct.TYPE_4__* %77
}

declare dso_local i32 @strcmp(i8*, i8*) #1

declare dso_local i32 @fz_strcasecmp(i8*, i8*) #1

declare dso_local %struct.TYPE_4__* @fz_new_output(i32*, i32, i32*, i32, i32*, i32*) #1

declare dso_local i64 @remove(i8*) #1

declare dso_local i32 @fz_throw(i32*, i32, i8*, i8*, i32) #1

declare dso_local i32 @strerror(i64) #1

declare dso_local i32* @fopen(i8*, i8*) #1

declare dso_local i32 @setvbuf(i32*, i32*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
